--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,10 +18,12 @@
     android:versionCode="1"
     android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="23" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="24" />
 
     <application
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="true">
 
         <provider
             android:name=".WeatherContentProvider"
